Add test:ci script for CI environment

--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "jest",
-    "lint": "eslint 'src/**/*.{js,jsx}'",
-    "lint:fix": "eslint 'src/**/*.{js,jsx}' --fix",
-    "eject": "react-scripts eject"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "test:ci": "react-scripts test --watchAll=false --ci",
+  "lint": "eslint 'src/**/*.{js,jsx}'",
+  "lint:fix": "eslint 'src/**/*.{js,jsx}' --fix",
+  "eject": "react-scripts eject"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
