--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,6 @@
-name: CI
-
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -20,10 +11,11 @@ jobs:
         node-version: '14'
 
     - name: Install dependencies
-      run: npm install
+      run: npm ci
 
-    - name: Set execute permissions for react-scripts
-      run: chmod +x ./node_modules/.bin/react-scripts
+    - name: Set execute permissions for node_modules
+      run: |
+        sudo chmod -R 777 /home/runner/work/patient-appointment-scheduling/patient-appointment-scheduling/node_modules/
 
     - name: Run tests
       run: npm run test:ci
