--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         node-version: '14'
 
     - name: Install dependencies
-      run: npm ci
+      run: npm Install
 
     - name: Set execute permissions for node_modules
       run: |
