--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,26 +2,21 @@
   "name": "frontend",
   "version": "1.0.0",
   "main": "index.js",
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    
-  
-    
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "jest": "^27.5.1",
     "prettier": "^3.3.3"
   },
   "babel": {
@@ -41,5 +36,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject"
   }
 }
